@@ -10,8 +10,7 @@ public class MethodTypeVars {
         Object a = A.badMethod(null);
         Object b = A.badMethod(new Object());
 
-        // TODO: false negative. See #979
-        //// :: error: (type.argument.type.incompatible)
+        // :: error: (type.argument.type.incompatible)
         A.goodMethod(null);
         A.goodMethod(new Object());
     }
@@ -33,7 +32,7 @@ class B {
 
     void call() {
         Integer[] arg = new Integer[] {1, 2, 3, 4};
-        indexOf1(arg, new Integer(5));
+        indexOf1(arg, Integer.valueOf(5));
         // indexOf2(arg, new Integer(5));
     }
 }
